Members: On the community profile screen in wp-admin, prevent field options being briefly visible on page load.
The field options were being hidden with JS after the screen was loaded. Instead, the options are now hidden with CSS.

git-svn-id: https://buddypress.svn.wordpress.org/trunk@7963 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-members/admin/css/admin.css
+++ b/bp-members/admin/css/admin.css
@@ -137,3 +137,7 @@ div#community-profile-page .form-table td.admin-field-radio label,
 div#community-profile-page .form-table td.admin-field-checkbox label {
 	display:block;
 }
+
+.field-visibility-settings {
+	display: none;
+}
